--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         </nav>
     </header>
     <main>
-        <h2>Class Members</h2>
+        <h2>Students</h2>
         <section class="container">
             <div class="jane-style">
-                <h3>Hello World!</h3>
+                <h3>Hello Class</h3>
             </div>
             <!-- New HTML content goes here! -->
             <div class="code-ninja-style">
@@ -24,6 +24,9 @@
             </div>
             <div class="codys-styles">
                 <h3>That's very exciting!</h3>
+            </div>
+            <div class="codys-styles">
+                <h3>Cant wait to start the extended course!</h3>
             </div>
         </section>
     </main>
