--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <!-- New HTML content goes here! -->
             <div class="code-ninja-style">
-                <h3>This is Second time using GitHub!</h3>
+                <h3>This is My Second time using GitHub!</h3>
             </div>
             <div class="codys-styles">
                 <h3>That's very exciting!</h3>
