--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <div class="codys-styles">
                 <h3>Cant wait to start the extended course!</h3>
             </div>
+            <div class="codys-styles">
+                <h3>Good Luck Everyone!</h3>
+            </div>
         </section>
     </main>
 </body>
